--- a/experiment5.html
+++ b/experiment5.html
@@ -8,24 +8,24 @@
 <body>
      <h1 align="center">Student Registration Form</h1>
     <form action="#" method="post" align="center">
-        <label for="fname">Full Name:</label><br>
+        <label for="fullname">Full Name:</label>
         <input type="text" id="fname" name="fname" placeholder="Enter your full name" required><br><br>
 
-        <label for="email">Email:</label><br>
+        <label for="email">Email:</label>
         <input type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
 
-        <label for="phone">Phone Number:</label><br>
+        <label for="phone">Phone Number:</label>
         <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required><br><br>
 
-        <label for="dob">Date of Birth:</label><br>
+        <label for="dob">Date of Birth:</label>
         <input type="date" id="dob" name="dob" required><br><br>
 
-        <label for="gender">Gender:</label><br>
+        <label for="gender">Gender:</label>
         <input type="radio" id="male" name="gender" value="male"> Male
         <input type="radio" id="female" name="gender" value="female"> Female
         <input type="radio" id="other" name="gender" value="other"> Other<br><br>
 
-        <label for="course">Course:</label><br>
+        <label for="course">Course:</label>
         <select id="course" name="course" required>
             <option value="">--Select Course--</option>
             <option value="btech">B.Tech</option>
@@ -35,6 +35,7 @@
         </select><br><br>
 
         <label for="address">Address:</label><br>
+
         <textarea id="address" name="address" rows="4" cols="40" placeholder="Enter your full address" required></textarea><br><br>
 
         <input type="submit" value="Register">
@@ -43,6 +44,6 @@
     <hr>
     <p align="center"><b>&copy;2025 Student Registration Portal</b></p>
 
-    
+
 </body>
 </html>
